# riri-mod-tools

./: .gitignore  Build.ps1  BuildReloadedMod.ps1  CHANGELOG.md  Cargo.toml  LICENSE  README.md  UnitTest.ps1
.github/workflows/: reloaded.yml
buildscript/riri.modruntime.BuildScript/: Argument.cs  CSharpGen.cs  CodePackage.cs  Executor.cs  Program.cs  Publish.cs  Terminal.cs  TypeExtensions.cs  Utils.cs  riri.modruntime.BuildScript.csproj
misc/: signature_cache.hexpat
riri-mod-runtime-reloaded/: Cargo.toml  build.rs
riri-mod-runtime-reloaded/data/: package.toml
riri-mod-runtime-reloaded/src/: hash.rs  lib.rs  vtable.rs
riri-mod-tools/: Cargo.toml
riri-mod-tools-impl/: Cargo.toml
riri-mod-tools-impl/src/: csharp.rs  datetime.rs  ensure_layout.rs  hook_codegen.rs  hook_parse.rs  interleave.rs  lib.rs  riri_hook.rs  riri_init.rs
riri-mod-tools-proc/: Cargo.toml
riri-mod-tools-proc/src/: lib.rs
riri-mod-tools-rt/: Cargo.toml
riri-mod-tools-rt/src/: address_linux.rs  address_unix.rs  address_win.rs  assembly_utils.rs  interleave.rs  interop.rs  lib.rs  logger.rs  mod_loader_data.rs  protection.rs  sigscan_resolver.rs  system.rs  vtable.rs
riri-mod-tools-rt/src/reloaded/mod/: interfaces.rs
riri-mod-tools/src/: config_codegen.rs  ensure_layout.rs  ensure_layout_tests.rs  git_version.rs  interleave_tests.rs  lib.rs  mod_package.rs  platform.rs  reloaded_codegen.rs  riri_hook_tests.rs  timestamp.rs  utils.rs
riri-mod-tools/src/hash/: hashes.toml
riri-mod-tools/src/hbs/: ffi_builtin.hbs  ffi_builtin.hbs.cs  ffi_builtin.rs  hashes.hbs  hashes.rs  mod_main.hbs  mod_main.hbs.cs  mod_main.rs
riri-mod-tools/src/r2/: hook_assignment.rs  hook_evaluation.rs
riri.modruntime/: BuildLinked.ps1  Config.cs  ModConfig.json  Publish.ps1  riri.modruntime.csproj  riri.modruntime.sln
riri.modruntime/Template/: ModBase.cs  ModContext.cs  Startup.cs
riri.modruntime/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
