[workspace]

members = [ 
    "riri-mod-runtime-reloaded", 
    "riri-mod-tools",
    "riri-mod-tools-impl",
    "riri-mod-tools-proc",
    "riri-mod-tools-rt"
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = [ "Rirurin" ]
license-file = "LICENSE"
homepage = "https://riri.wtf"
repository = "https://github.com/rirurin/riri-mod-tools"

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.

# Release Build with Debug Info
[profile.release-debug]
codegen-units = 1
inherits = "release"
debug = true # Allow us to debug using LLDB

# Release Build but without LTO since that takes 10 years
[profile.release-ltoless]
inherits = "release"
lto = false

# [patch."https://github.com/rirurin/cpp-types"]
# cpp-types = { path = "../cpp-types/cpp-types" }

# [patch."https://github.com/rirurin/csbindgen"]
# csbindgen = { path = "../csbindgen/csbindgen" }