[package]
name = "riri-mod-runtime-reloaded"
description = "Common utilities for Reloaded-II Rust mods"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
humantime = "2.2.0"
riri-mod-tools-proc = { path = "../riri-mod-tools-proc" }
riri-mod-tools-rt = { path = "../riri-mod-tools-rt" }
rkyv = "0.8.10"
twox-hash = "2.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Time"
]

[build-dependencies]
toml = "0.8"
walkdir = "2.5"
csbindgen = { path = "../../csbindgen/csbindgen" }
riri-mod-tools = { path = "../riri-mod-tools" }