[package]
name = "riri-mod-tools-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[dependencies]
twox-hash = "2.1.0"
riri-mod-tools-proc = { path = "../riri-mod-tools-proc" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading"
]

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"

[features]
detailed-logs = []
