[package]
name = "riri-mod-tools-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bitflags = "^2.10.0"
twox-hash = "2.1.0"
riri-mod-tools-proc = { path = "../riri-mod-tools-proc" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading"
]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.180"

[features]
detailed-logs = []
reloaded = []
default = ["reloaded"]
