[package]
name = "riri-mod-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[dependencies]
handlebars = "6.2"
quote = "1.0"
riri-mod-tools-impl = { path = "../riri-mod-tools-impl" }
semver = "1.0"
serde = "1.0"
simd-json = "0.14"
syn = { version = "2.0", features = ["full", "extra-traits"] }
toml = "0.8"
twox-hash = "2.1"
walkdir = "2.5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading"
]
