[package]
name = "riri-mod-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
handlebars = "6.2"
proc-macro2 = "1.0"
quote = "1.0"
riri-mod-tools-impl = { path = "../riri-mod-tools-impl" }
rkyv = "0.8.10"
semver = "1.0"
serde = "1.0"
simd-json = "0.14"
syn = { version = "2.0", features = ["full", "extra-traits"] }
toml = "0.8"
twox-hash = "2.1"
walkdir = "2.5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading"
]
